--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-hooks",
   "version": "0.1.0",
   "private": true,
-  "homepage":"/temp/hooks/",
+  "homepage":"/simplehr/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
